<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">工具百宝箱V3.2.0.2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_text">填写信息</string>
    	<dimen name="search_hall_width">30dip</dimen>
	<dimen name="search_hall_height">30dip</dimen>
	<dimen name="search_hall_right">10dip</dimen>
	<string name="username">电话号码</string>
	 <string name="defaultTypeFace">1</string>
	   <string name="register_input_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
 <string name="telphone">请输入手机号码</string>
 <string name="input_digit_limit">0123456789</string>
 <string name="code">填充数量</string>
     <string name="txtpassword_hint">字母或数字，4~16位</string>
    <string name="txtpassword_hint_login">请输入密码</string>
    <string name="password_confirm">信息字数</string>
    <string name="txtConfirmPassword_hint">再次填写密码</string>
    <string name="txtEmail">对话数量</string>
     <string name="txtHint_Email">用于找回密码</string>
     <string name="btnok">发送</string>
     <string name="suggestion_feedback">信息内容</string>
     <string name="content">请在此输入您要发送的信息。\n</string>
     <string name="wordsCal">0/100</string>
     <string name="commit">发送</string>
     <string name="action_exit">退出</string>
         <string name="audio_text">音频</string>
    <string name="video_text">视频</string>
    <drawable name="clr_normal">#ccffffff</drawable>
    <drawable name="clr_pressed">#c0c0c0</drawable>
    <string name="hello"></string>
</resources>
