<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
       
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:background="@color/morefragmentBG">
                <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/white" 
                android:stretchColumns="1" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/SettingItemExNew"
                        android:paddingLeft="8dip"
                        android:text="@string/username" 
                        android:typeface="@string/defaultTypeFace"/>

                    <EditText
                        android:id="@+id/txtUserName"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:textColorHint="#999999"
                        android:typeface="@string/defaultTypeFace"
                        android:layout_column="1"
                        android:background="@null"
                        android:digits="@string/input_digit_limit"
                        android:hint="@string/telphone"
                        android:maxLength="11"
                        android:singleLine="true" />
                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e1e1e1" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/SettingItemExNew"
                        android:paddingLeft="8dip"
                        android:text="@string/code"
                        android:typeface="@string/defaultTypeFace"/>

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:textColorHint="#999999"
                        android:typeface="@string/defaultTypeFace"
                        android:layout_column="1"
                        android:background="@null"
                        android:digits="@string/input_digit_limit"
                        android:hint="1~1000条, 默认为1条"
                        android:maxLength="16"
                        android:singleLine="true" />
                </TableRow>



            </TableLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="12dp"
            android:background="#e1e1e1" />

        <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
                  
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#f6f6f6">
        


        <EditText
            android:id="@+id/eText_FeedBack_comment"
            android:layout_width="fill_parent"
            android:layout_height="168dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:textSize="16sp"
            android:gravity="left|top"
            android:hint="@string/content"
            android:textColorHint="#999999"
            android:typeface="@string/defaultTypeFace"
            android:background="@color/white"/>
        
        <TextView
            android:id="@+id/tv_wordsLimit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:background="@color/white"
            android:gravity="right"
            android:typeface="@string/defaultTypeFace"
            android:text="@string/wordsCal" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="12dp"
            android:background="#e1e1e1" />

        <Button
            android:id="@+id/btn_FeedBack_Submit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_confirm_buttons"
            android:text="@string/commit"
            android:typeface="@string/defaultTypeFace"
            android:textColor="#009DF2"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />
                                                       <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="12dp"
            android:background="#e1e1e1" />
                                                    	  
	  <ProgressBar  
	  	 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:id="@+id/progress1"
		 android:max="100"
		 android:visibility="gone"
	 	 style="@android:style/Widget.ProgressBar.Horizontal"
	 	 /> 
    </LinearLayout>

</LinearLayout>
    </LinearLayout>
    
   

</LinearLayout>