<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
       <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:layout_weight="2" > 
       <TextView android:layout_width="fill_parent"  
           android:layout_height="50dp"
         android:id="@+id/TextView"   
         android:background="#ffff00"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="10dp"
         android:lineSpacingExtra="5dp"
         android:typeface="@string/defaultTypeFace"		
    	 android:textSize="16sp"
         android:textColor="#777777"
         android:gravity="center"
         android:text="总空间    占用空间    剩余空间    占用百分比%" /> 
        <View
            android:layout_width="fill_parent"
            android:layout_height="12dip"
            android:background="#fafafa"
             />
                   <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />

    		     		<TextView 
    			android:text="执行显示"
    			android:id="@+id/text_display"
    			android:layout_height="50dp"
    			android:layout_width="fill_parent"
    			android:paddingBottom="2dip"
     			android:textSize="18sp"
                android:textColor="#777777"
                android:gravity="center"
    			android:typeface="@string/defaultTypeFace"
    			android:clickable="false"
    		 />	
    		                    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />
             />
         </LinearLayout>
    

     
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:layout_weight="1"
        android:background="@color/morefragmentBG">
        
                <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/white" 
                android:stretchColumns="1" >


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/SettingItemExNew"
                        android:paddingLeft="8dip"
                        android:text="@string/code"
                        android:typeface="@string/defaultTypeFace"/>

                    <EditText
                        android:id="@+id/fillvalue"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:textColorHint="#999999"
                        android:typeface="@string/defaultTypeFace"
                        android:layout_column="1"
                        android:background="@null"
                        android:digits="@string/input_digit_limit"
                        android:hint="单位为M"
                        android:maxLength="16"
                        android:singleLine="true" />
                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e1e1e1" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/SettingItemExNew"
                        android:paddingLeft="8dip"
                        android:text="@string/password_confirm"
                        android:typeface="@string/defaultTypeFace"/>

                    <EditText
                        android:id="@+id/fillpercent"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:textColorHint="#999999"
                        android:typeface="@string/defaultTypeFace"
                        android:layout_column="1"
                        android:background="@null"
                        android:digits="@string/input_digit_limit"
                        android:hint="单位为%"
                        android:maxLength="16"
                        android:singleLine="true" />
                 
                </TableRow>
            </TableLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />


        <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#f6f6f6">  

                                               <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="12dp"
            android:background="#e1e1e1" />

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_confirm_buttons"
            android:text="@string/commit"
            android:typeface="@string/defaultTypeFace"
            android:textColor="#009DF2"
            android:textSize="18sp"
            android:layout_gravity="bottom" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />
                                                       <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="12dp"
            android:background="#e1e1e1" />
                                                    	  
	  <ProgressBar  
	  	 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:id="@+id/progress1"
		 android:max="100"
		 android:visibility="gone"
	 	 style="@android:style/Widget.ProgressBar.Horizontal"
	 	 />   
    </LinearLayout>

</LinearLayout>
    </LinearLayout>
    
   

</LinearLayout>